Category sort for employee menu

--- a/Restaurant Ordering System/public_html/Customer/customer_menu.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_menu.html
@@ -271,7 +271,7 @@ const Cart = {
       this.items.push({ id, name, priceCents, qty });
     }
     this.save();
-    this.showToast(`${name} added to cart ✅`);
+    this.showToast(`${name} added to cart `);
   },
 
   showToast(message) {
