--- a/Restaurant Ordering System/public_html/Employee/employee_list.html
+++ b/Restaurant Ordering System/public_html/Employee/employee_list.html
@@ -9,11 +9,19 @@
 <body class="bg-gray-50 font-sans min-h-screen">
   <header class="bg-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-gray-800">Employee Management</h1>
-    <div class="space-x-4">
-      <a href="/Employee/employee_register.html" class="text-blue-600 hover:underline">➕ Add Employee</a>
-      <a href="/Employee/admin_main.html" class="text-gray-600 hover:underline">← Back to Dashboard</a>
-    </div>
-  </header>
+<div class="flex gap-3">
+  <a href="/Employee/employee_register.html"
+     class="bg-blue-600 text-white px-4 py-2 rounded-md shadow hover:bg-blue-700 
+            transition text-sm flex items-center gap-2">
+     Add Employee
+  </a>
+
+  <a href="/Employee/admin_main.html"
+     class="bg-gray-100 text-gray-800 px-4 py-2 rounded-md border border-gray-300 
+            hover:bg-gray-200 transition text-sm flex items-center gap-2">
+     Back to Dashboard
+  </a>
+</div>  </header>
 
   <main class="p-6 max-w-5xl mx-auto">
     <h2 class="text-xl font-semibold text-gray-700 mb-4">All Employees</h2>
@@ -77,10 +85,10 @@
       const data = await res.json();
 
       if (data.success) {
-        alert('✅ Employee deleted successfully');
+        alert(' Employee deleted successfully');
         loadEmployees();
       } else {
-        alert('❌ ' + (data.message || 'Failed to delete'));
+        alert(' ' + (data.message || 'Failed to delete'));
       }
     }
 
