--- a/Restaurant Ordering System/public_html/Customer/customer_menu.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_menu.html
@@ -9,233 +9,285 @@
 
 <body class="bg-gray-50 text-gray-800 font-sans min-h-screen flex flex-col">
 
-  <!-- Header -->
+<!-- Header -->
 <header class="bg-white border-b border-gray-200">
   <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-    <!-- Left side: logo/title -->
-    <div class="flex items-center gap-3">
-      <h1 class="text-xl sm:text-2xl font-semibold">Self Service Ordering</h1>
-    </div>
+    <h1 class="text-xl sm:text-2xl font-semibold">Self Service Ordering</h1>
 
-    <!-- Right side: navigation buttons -->
-    <nav class="flex items-center gap-2 ml-auto">
-      <a href="customer_main.html"
-         class="bg-gray-100 text-gray-800 px-3 py-1 rounded-md hover:bg-gray-200 transition">Home</a>
-      <a href="customer_cart.html"
-         class="bg-blue-600 text-white px-3 py-1 rounded-md hover:bg-blue-700 transition">Cart</a>
-      <a href="customer_order.html"
-         class="bg-green-600 text-white px-3 py-1 rounded-md hover:bg-green-700 transition">My Orders</a>
-      <a href="customer_login.html"
-         class="bg-blue-100 text-gray-800 px-3 py-1 rounded-md hover:bg-blue-200 transition">Login</a>
-    </nav>
+    <div class="relative">
+      <button id="menuButton"
+              class="flex items-center justify-center w-10 h-10 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition focus:outline-none">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
+             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+
+      <!-- Dropdown menu -->
+      <div id="menuDropdown"
+           class="hidden absolute right-0 mt-2 w-44 bg-white border border-gray-200 rounded-lg shadow-lg overflow-hidden z-50">
+        <a href="customer_login.html"
+           id="loginLogoutLink"
+           class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Login</a>
+        <a href="customer_cart.html"
+           class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Cart</a>
+        <a href="customer_order.html"
+           class="block px-4 py-2 text-gray-700 hover:bg-gray-100">My Orders</a>
+        <a href="customer_main.html"
+           class="block px-4 py-2 text-gray-700 hover:bg-gray-100 border-t">Home</a>
+      </div>
+    </div>
   </div>
 </header>
 
-  <!-- Main -->
-  <main class="flex-grow max-w-6xl mx-auto px-4 py-8">
-    <h2 class="text-lg sm:text-xl font-semibold mb-6 text-center">Browse and Add Items to Your Cart</h2>
+<!-- Main -->
+<main class="flex-grow max-w-6xl mx-auto px-4 py-8">
+  <h2 class="text-lg sm:text-xl font-semibold mb-6 text-center">Browse and Add Items to Your Cart</h2>
 
-    <div class="sm:hidden text-center mb-5">
-      <a href="customer_checkout.html"
-         class="inline-block bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">
-        Go to Checkout
-      </a>
-    </div>
+  <div class="sm:hidden text-center mb-5">
+    <a href="customer_cart.html"
+       class="inline-block bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">
+      Check your Cart
+    </a>
+  </div>
 
-    <!-- Menu Grid -->
-    <section id="menuGrid" class="grid gap-4 sm:gap-6 grid-cols-2 sm:grid-cols-3 md:grid-cols-4">
-      <p class="col-span-full text-center text-gray-500">Loading menu items...</p>
-    </section>
+<!-- Category Filter -->
+<div class="flex justify-end mb-6">
+  <select id="categoryFilter"
+          class="border px-3 py-2 rounded-lg bg-white shadow-sm">
+    <option value="all">All Categories</option>
+  </select>
+</div>
 
-    <div class="hidden sm:flex justify-end mt-8">
-      <a href="customer_checkout.html"
-         class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">
-        Proceed to Checkout
-      </a>
-    </div>
-  </main>
+<!-- Grouped Menu Container -->
+<div id="menuContainer" class="space-y-10">
+    <!-- JS will insert category groups -->
+</div>
 
-  <footer class="bg-white border-t border-gray-200 mt-10">
-    <div class="max-w-6xl mx-auto p-4 text-center text-xs text-gray-500">
-      &copy; 2025 Self Service Ordering. All rights reserved.
-    </div>
-  </footer>
 
-  <!-- Customer Session Management -->
-  <script>
-  const CustomerSession = {
-    // Check if user is logged in
-    isLoggedIn() {
-      return localStorage.getItem('customerLoggedIn') === 'true';
-    },
+  <div class="hidden sm:flex justify-end mt-8">
+    <a href="customer_cart.html"
+       class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">
+      Check your Cart
+    </a>
+  </div>
+</main>
 
-    // Get customer data
-    getCustomer() {
-      const data = localStorage.getItem('customerData');
-      return data ? JSON.parse(data) : null;
-    },
+<footer class="bg-white border-t border-gray-200 mt-10">
+  <div class="max-w-6xl mx-auto p-4 text-center text-xs text-gray-500">
+    &copy; 2025 Self Service Ordering. All rights reserved.
+  </div>
+</footer>
 
-    // Set customer session after login
-    setSession(customerData) {
-      localStorage.setItem('customerLoggedIn', 'true');
-      localStorage.setItem('customerData', JSON.stringify(customerData));
-      localStorage.setItem('customerEmail', customerData.email);
-    },
+<!-- Customer Session Management -->
+<script>
+const CustomerSession = {
+  isLoggedIn() {
+    return localStorage.getItem('customerLoggedIn') === 'true';
+  },
+  getCustomer() {
+    const data = localStorage.getItem('customerData');
+    return data ? JSON.parse(data) : null;
+  },
+  setSession(customerData) {
+    localStorage.setItem('customerLoggedIn', 'true');
+    localStorage.setItem('customerData', JSON.stringify(customerData));
+    localStorage.setItem('customerEmail', customerData.email);
+  },
+  clearSession() {
+    localStorage.removeItem('customerLoggedIn');
+    localStorage.removeItem('customerData');
+    localStorage.removeItem('customerEmail');
+    fetch('/api/logout', { method: 'POST' });
+  }
+};
 
-    // Clear session on logout
-    clearSession() {
-      localStorage.removeItem('customerLoggedIn');
-      localStorage.removeItem('customerData');
-      localStorage.removeItem('customerEmail');
+// Dropdown + session logic
+document.addEventListener('DOMContentLoaded', () => {
+  const menuButton = document.getElementById('menuButton');
+  const menuDropdown = document.getElementById('menuDropdown');
+  const loginLogoutLink = document.getElementById('loginLogoutLink');
 
-      // Also call server logout
-      fetch('/api/logout', { method: 'POST' });
-    },
-
-    // Auto-populate checkout form if logged in
-    populateCheckoutForm() {
-      if (this.isLoggedIn() && document.getElementById('custName')) {
-        const customer = this.getCustomer();
-        document.getElementById('custName').value = customer.name || '';
-        document.getElementById('custEmail').value = customer.email || '';
-        // Make email read-only if logged in
-        document.getElementById('custEmail').readOnly = true;
-      }
-    },
-
-    // Update navigation based on login status
-    updateNavigation() {
-      const loginBtn = document.querySelector('a[href="customer_login.html"]');
-      const ordersBtn = document.querySelector('a[href="customer_order.html"]');
-
-      if (loginBtn) {
-        if (this.isLoggedIn()) {
-          loginBtn.textContent = 'Logout';
-          loginBtn.href = '#';
-          loginBtn.onclick = (e) => {
-            e.preventDefault();
-            this.clearSession();
-            window.location.href = 'customer_main.html';
-          };
-        } else {
-          loginBtn.textContent = 'Login';
-          loginBtn.href = 'customer_login.html';
-          loginBtn.onclick = null;
-        }
-      }
-    }
-  };
-
-  // Initialize on page load
-  document.addEventListener('DOMContentLoaded', () => {
-    CustomerSession.updateNavigation();
+  // Toggle dropdown
+  menuButton.addEventListener('click', () => {
+    menuDropdown.classList.toggle('hidden');
   });
-  </script>
 
-  <script>
-    function goBackOrHome() {
-      if (document.referrer && document.referrer !== window.location.href) {
-        history.back();
-      } else {
-        window.location.href = 'customer_main.html';
-      }
+  // Close when clicking outside
+  document.addEventListener('click', (event) => {
+    if (!menuButton.contains(event.target) && !menuDropdown.contains(event.target)) {
+      menuDropdown.classList.add('hidden');
+    }
+  });
+
+  // Login/Logout toggle
+  if (CustomerSession.isLoggedIn()) {
+    loginLogoutLink.textContent = 'Logout';
+    loginLogoutLink.href = '#';
+    loginLogoutLink.addEventListener('click', (e) => {
+      e.preventDefault();
+      CustomerSession.clearSession();
+      window.location.href = 'customer_main.html';
+    });
+  } else {
+    loginLogoutLink.textContent = 'Login';
+    loginLogoutLink.href = 'customer_login.html';
+  }
+});
+</script>
+
+<script>
+let allMenuItems = [];
+
+// Fetch menu from your existing /api/menu route
+async function fetchMenu() {
+  try {
+    const res = await fetch('/api/menu');
+    const data = await res.json();
+
+    if (!data.success) {
+      console.error('Error loading menu:', data.message);
+      return;
     }
 
-    // Fetch and display menu items dynamically
-    async function loadMenu() {
-      const menuGrid = document.getElementById('menuGrid');
-      menuGrid.innerHTML = '<p class="col-span-full text-center text-gray-500">Loading menu items...</p>';
+    allMenuItems = data.items || [];
 
-      try {
-        const response = await fetch('/api/menu');  // Fetch from server
-        const data = await response.json();
+    populateCategoryFilter();
+    renderMenu('all');
+  } catch (err) {
+    console.error('API Error:', err);
+  }
+}
 
-        if (!data.success || !data.items.length) {
-          menuGrid.innerHTML = '<p class="col-span-full text-center text-gray-500">No items available right now.</p>';
-          return;
-        }
+// Fill dropdown with real categories from DB
+function populateCategoryFilter() {
+  const select = document.getElementById('categoryFilter');
+  select.innerHTML = `<option value="all">All Categories</option>`;
 
-        menuGrid.innerHTML = data.items.map(item => `
-          <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col border border-gray-200">
-            <img src="/public_html/image/placeholder.jpg" alt="${item.item_name}" class="w-full h-36 object-cover">
-            <div class="p-4 flex flex-col flex-grow">
-              <h3 class="font-medium text-gray-900">${item.item_name}</h3>
-              <p class="text-xs text-gray-600 flex-grow">${item.description || ''}</p>
-              <div class="flex justify-between items-center mt-2">
-                <span class="font-semibold">$${parseFloat(item.price).toFixed(2)}</span>
-                <button
-                  class="bg-blue-600 text-white px-3 py-1 rounded-md text-sm hover:bg-blue-700 transition"
-                  data-add-to-cart
-                  data-id="${item.item_id}"
-                  data-name="${item.item_name}"
-                  data-price="${item.price}">
-                  Add
-                </button>
-              </div>
-            </div>
+  const categories = [...new Set(
+    allMenuItems
+      .map(i => i.category)
+      .filter(c => c && c.trim() !== '')
+  )].sort();
+
+  categories.forEach(cat => {
+    const opt = document.createElement('option');
+    opt.value = cat;
+    opt.textContent = cat;
+    select.appendChild(opt);
+  });
+}
+
+// Render menu grouped by category
+function renderMenu(selectedCategory = 'all') {
+  const container = document.getElementById('menuContainer');
+  container.innerHTML = "";
+
+  // Filter
+  const filtered = selectedCategory === 'all'
+    ? allMenuItems
+    : allMenuItems.filter(i => i.category === selectedCategory);
+
+  // Group
+  const groups = {};
+  filtered.forEach(item => {
+    const cat = item.category || "Other";
+    if (!groups[cat]) groups[cat] = [];
+    groups[cat].push(item);
+  });
+
+  const sortedCategories = Object.keys(groups).sort();
+
+  sortedCategories.forEach(cat => {
+    const section = document.createElement('section');
+
+    const itemsHtml = groups[cat].map(item => `
+      <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col border border-gray-200">
+        <img src="/image/${item.image}" 
+             class="w-full h-40 object-cover"/>
+
+        <div class="p-4 flex flex-col flex-grow">
+          <h3 class="font-semibold text-gray-900">${item.item_name}</h3>
+          <p class="text-xs text-gray-600 flex-grow">${item.description || ''}</p>
+
+          <div class="flex justify-between items-center mt-3">
+            <span class="font-bold text-gray-800">$${Number(item.price).toFixed(2)}</span>
+            <button class="bg-blue-600 text-white px-3 py-1 rounded-md text-sm hover:bg-blue-700 transition"
+              data-add-cart
+              data-id="${item.item_id}"
+              data-name="${item.item_name}"
+              data-price="${item.price}">
+              Add
+            </button>
           </div>
-        `).join('');
+        </div>
+      </div>
+    `).join("");
 
-        // Enable Add to Cart buttons
-        document.querySelectorAll('[data-add-to-cart]').forEach(btn => {
-          btn.addEventListener('click', () => {
-            const { id, name, price } = btn.dataset;
-            const priceCents = Math.round(parseFloat(price) * 100);
-            Cart.addItem({ id, name, priceCents, qty: 1 });
-            Cart.showToast(`${name} added to cart ✅`);
-          });
-        });
-      } catch (err) {
-        console.error('Failed to load menu:', err);
-        menuGrid.innerHTML = '<p class="col-span-full text-center text-red-500">Error loading menu.</p>';
-      }
+    section.innerHTML = `
+      <h2 class="text-xl font-bold mb-3">${cat}</h2>
+      <div class="grid gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+        ${itemsHtml}
+      </div>
+    `;
+
+    container.appendChild(section);
+  });
+
+  // Re-bind Add to Cart buttons
+  document.querySelectorAll('[data-add-cart]').forEach(btn => {
+    btn.addEventListener('click', () => {
+      const { id, name, price } = btn.dataset;
+      const priceCents = Math.round(parseFloat(price) * 100);
+      Cart.addItem({ id, name, priceCents, qty: 1 });
+    });
+  });
+}
+
+document.addEventListener('DOMContentLoaded', () => {
+  fetchMenu();
+
+  document.getElementById('categoryFilter').addEventListener('change', (e) => {
+    renderMenu(e.target.value);
+  });
+});
+</script>
+
+
+<!-- Cart system -->
+<script>
+const Cart = {
+  items: JSON.parse(localStorage.getItem('cartItems')) || [],
+
+  save() {
+    localStorage.setItem('cartItems', JSON.stringify(this.items));
+  },
+
+  addItem({ id, name, priceCents, qty }) {
+    const existing = this.items.find(i => i.id === id);
+    if (existing) {
+      existing.qty += qty;
+    } else {
+      this.items.push({ id, name, priceCents, qty });
     }
+    this.save();
+    this.showToast(`${name} added to cart `);
+  },
 
-    document.addEventListener('DOMContentLoaded', loadMenu);
-  </script>
+  showToast(message) {
+    const toast = document.createElement('div');
+    toast.className = 'fixed bottom-6 right-6 bg-green-600 text-white px-4 py-2 rounded-lg shadow-lg z-50';
+    toast.textContent = message;
+    document.body.appendChild(toast);
+    setTimeout(() => toast.remove(), 2500);
+  },
 
-  <!-- Cart system -->
-  <script>
-    const Cart = {
-      items: JSON.parse(localStorage.getItem('cartItems')) || [],
+  clear() {
+    this.items = [];
+    this.save();
+  }
+};
+</script>
 
-      save() {
-        localStorage.setItem('cartItems', JSON.stringify(this.items));
-      },
-
-      addItem({ id, name, priceCents, qty }) {
-        const existing = this.items.find(i => i.id === id);
-        if (existing) {
-          existing.qty += qty;
-        } else {
-          this.items.push({ id, name, priceCents, qty });
-        }
-        this.save();
-        this.showToast(`${name} added to cart ✅`);
-        console.log("Cart now:", this.items);
-      },
-
-      showToast(message) {
-        const toast = document.createElement('div');
-        toast.className = 'fixed bottom-6 right-6 bg-green-600 text-white px-4 py-2 rounded-lg shadow-lg z-50';
-        toast.textContent = message;
-        document.body.appendChild(toast);
-        setTimeout(() => toast.remove(), 2500);
-      },
-
-      clear() {
-        this.items = [];
-        this.save();
-      },
-
-      getTotalCount() {
-        return this.items.reduce((sum, item) => sum + item.qty, 0);
-      },
-
-      getTotalPrice() {
-        return this.items.reduce((sum, item) => sum + item.priceCents * item.qty, 0) / 100;
-      }
-    };
-  </script>
 </body>
 </html>
